<resources>
    <string name="app_name">StoryApp</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_exit">Keluar</string>
    <string name="text_about">Tentang</string>
    <string name="text_version_app">Versi %s %s</string>
    <string name="please_add_photo">Tambahkan foto</string>
    <string name="failed_to_create_story">Gagal menambahkan cerita</string>
    <string name="success_created">Berhasil menambahkan</string>
    <string name="permission_denied">Tidak mendapatkan permission</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="take_photo">Pilih dari kamera</string>
    <string name="choose_from_gallery">Pilih dari galeri</string>
    <string name="added_at">Ditambahkan pada %s</string>
    <string name="text_create_story">Tambah Cerita baru</string>
    <string name="text_write_your_story">Tulis cerita kamu</string>
    <string name="add_image">Tambahkan gambar</string>
    <string name="add_story">Tambahkan Cerita</string>
    <string name="text_detail_story">Detail Story</string>
    <string name="text_not_have_account_yet">Belum punya akun? Daftar sekarang</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="take_your_moment">Abadikan momenmu</string>
    <string name="text_your_account_active">Selamat akun kamu sudah aktif sekarang</string>
    <string name="text_waiting">Tunggu ya kami sedang mempersiapkan aplikasi, jangan khawatir halaman ini akan tertutup otomatis</string>
    <string name="text_create_account">Buat akun</string>
    <string name="text_desc_create_account">Buat akun baru dengan email aja</string>
    <string name="text_name">Nama</string>
    <string name="create_account">Buat akun</string>
    <string name="success_register">Registrasi berhasil</string>
    <string name="login_failed">Login gagal</string>
    <string name="login_success">Login berhasil</string>
    <string name="cannot_fetch_data">Tidak dapat mengambil data</string>
    <string name="text_story_based_location">Story berdasar lokasi</string>
    <string name="text_edit_photo">Ketuk untuk mengubah foto</string>
    <string name="text_location">Lokasi</string>
    <string name="text_add_photo">Tambahkan Foto</string>
    <string name="text_take_photo">Sentuh untuk mengambil foto</string>
</resources>